@@ -70,10 +70,6 @@ bool g_sync_old_done = false;
 char g_sync_src_ip_addr[IP_ADDRESS_SIZE] = {0};
 int g_sync_until_timestamp = 0;
 
-int g_local_host_ip_count = 0;
-char g_local_host_ip_addrs[STORAGE_MAX_LOCAL_IP_ADDRS * \
-				IP_ADDRESS_SIZE];
-
 char g_tracker_client_ip[IP_ADDRESS_SIZE] = {0}; //storage ip as tracker client
 char g_last_storage_ip[IP_ADDRESS_SIZE] = {0};	 //the last storage ip address
 
@@ -92,7 +88,6 @@ char g_bind_addr[IP_ADDRESS_SIZE] = {0};
 bool g_client_bind_addr = true;
 bool g_storage_ip_changed_auto_adjust = false;
 bool g_thread_kill_done = false;
-char g_if_alias_prefix[STORAGE_IF_ALIAS_PREFIX_MAX_SIZE] = {0};
 
 int g_thread_stack_size = 512 * 1024;
 int g_upload_priority = DEFAULT_UPLOAD_PRIORITY;
@@ -114,99 +109,5 @@ int storage_cmp_by_ip_addr(const void *p1, const void *p2)
 {
 	return strcmp((*((FDFSStorageServer **)p1))->server.ip_addr,
 		(*((FDFSStorageServer **)p2))->server.ip_addr);
-}
-
-bool is_local_host_ip(const char *client_ip)
-{
-	char *p;
-	char *pEnd;
-
-	pEnd = g_local_host_ip_addrs + \
-		IP_ADDRESS_SIZE * g_local_host_ip_count;
-	for (p=g_local_host_ip_addrs; p<pEnd; p+=IP_ADDRESS_SIZE)
-	{
-		if (strcmp(client_ip, p) == 0)
-		{
-			return true;
-		}
-	}
-
-	return false;
-}
-
-int insert_into_local_host_ip(const char *client_ip)
-{
-	if (is_local_host_ip(client_ip))
-	{
-		return 0;
-	}
-
-	if (g_local_host_ip_count >= STORAGE_MAX_LOCAL_IP_ADDRS)
-	{
-		return -1;
-	}
-
-	strcpy(g_local_host_ip_addrs + \
-		IP_ADDRESS_SIZE * g_local_host_ip_count, \
-		client_ip);
-	g_local_host_ip_count++;
-	return 1;
-}
-
-void load_local_host_ip_addrs()
-{
-#define STORAGE_MAX_ALIAS_PREFIX_COUNT   4
-	char ip_addresses[STORAGE_MAX_LOCAL_IP_ADDRS][IP_ADDRESS_SIZE];
-	int count;
-	int k;
-	char *if_alias_prefixes[STORAGE_MAX_ALIAS_PREFIX_COUNT];
-	int alias_count;
-
-	insert_into_local_host_ip("127.0.0.1");
-
-	memset(if_alias_prefixes, 0, sizeof(if_alias_prefixes));
-	if (*g_if_alias_prefix == '\0')
-	{
-		alias_count = 0;
-	}
-	else
-	{
-		alias_count = splitEx(g_if_alias_prefix, ',', \
-			if_alias_prefixes, STORAGE_MAX_ALIAS_PREFIX_COUNT);
-		for (k=0; k<alias_count; k++)
-		{
-			trim(if_alias_prefixes[k]);
-		}
-	}
-
-	if (gethostaddrs(if_alias_prefixes, alias_count, ip_addresses, \
-			STORAGE_MAX_LOCAL_IP_ADDRS, &count) != 0)
-	{
-		return;
-	}
-
-	for (k=0; k<count; k++)
-	{
-		insert_into_local_host_ip(ip_addresses[k]);
-	}
-
-	//print_local_host_ip_addrs();
-}
-
-void print_local_host_ip_addrs()
-{
-	char *p;
-	char *pEnd;
-
-	printf("local_host_ip_count=%d\n", g_local_host_ip_count);
-	pEnd = g_local_host_ip_addrs + \
-		IP_ADDRESS_SIZE * g_local_host_ip_count;
-	for (p=g_local_host_ip_addrs; p<pEnd; p+=IP_ADDRESS_SIZE)
-	{
-		printf("%d. %s\n", (int)((p-g_local_host_ip_addrs)/ \
-				IP_ADDRESS_SIZE)+1, p);
-	}
-
-	printf("\n");
 }
 
